--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <!-- img tile system -->
             <img src="https://images.pexels.com/photos/5935189/pexels-photo-5935189.jpeg?auto=compress&cs=tinysrgb&w=600"/>
             <img src="https://images.pexels.com/photos/338713/pexels-photo-338713.jpeg?auto=compress&cs=tinysrgb&w=600" />
-        </div>
+		</div>
             
     <!-- menu layout-->
         <section id="home-menu">
@@ -102,7 +102,7 @@
 
     <div class="menu">   
         <div class="menuIntro">    
-            <img  id="caption_img"src="https://i.ibb.co/9g9yg5G/chad-montano-l-P5-MCM6n-Z5-A-unsplash.jpg"  />  
+            <img  id="caption_img"src="https://images.pexels.com/photos/4968297/pexels-photo-4968297.jpeg?auto=compress&cs=tinysrgb&w=1600"  />  
             <img id="caption_img" src="https://i.ibb.co/q1HKkyL/ella-olsson-4d-Qia-WKi-L-Y-unsplash.jpg" />
         </div>
  
