--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 
     <div class="menu">   
         <div class="menuIntro">    
-             <img src="https://i.ibb.co/GJ0Q03Q/camille-paralisan-rq-NIBr-DGnh4-unsplash.jpg" />
-             <img src="https://i.ibb.co/rsxRJMX/oscar-nord-5-CPn8-NE2-Tc-unsplash.jpg" />
+             <img src="https://images.pexels.com/photos/291528/pexels-photo-291528.jpeg?auto=compress&cs=tinysrgb&w=1600" />
+             <img src="https://images.pexels.com/photos/6163264/pexels-photo-6163264.jpeg?auto=compress&cs=tinysrgb&w=1600" />
         </div>
      <section id="home-menu">
             <h2>DESERT MENU</h2>
@@ -174,9 +174,9 @@
 			<span class="Description">Warm apple pie tooped with icecream.</span>
 		</li>
 		<li>
-			<span class="dish">Churros.</span>
+			<span class="dish">Chocolate Muffins.</span>
 			<span class="Price">25 RON</span>
-			<span class="Description">pancake mix, water, oil, sugar, cinnamon.</span>
+			<span class="Description">banana chocolate muffins</span>
 		</li>
 		<li>
 			<span class="dish">Sopaipillas</span>
@@ -189,16 +189,7 @@
 			<span class="Description">A small slice of this impressively rich, creamy, caramel flan dessert goes a long
 				way.</span>
 		</li>
-		<li>
-			<span class="dish">Shortcut Tres Leches Cake</span>
-			<span class="Price">38 RON</span>
-			<span class="Description">My mom's favorite cake is tres leches, a butter cake soaked in three kinds of milk. </span>
-		</li>
-		<li>
-			<span class="dish">Pressure-Cooker Pumpkin Flans</span>
-			<span class="Price">26 RON</span>
-			<span class="Description">This silky, smooth dessert captures the essence and elegance of fall. </span>
-		</li>
+		
 	</ul></section></div></div>
 
 
