--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="menu">   
         <div class="menuIntro">    
             <img  id="caption_img"src="https://images.pexels.com/photos/4968297/pexels-photo-4968297.jpeg?auto=compress&cs=tinysrgb&w=1600"  />  
-            <img id="caption_img" src="https://i.ibb.co/q1HKkyL/ella-olsson-4d-Qia-WKi-L-Y-unsplash.jpg" />
+            <img id="caption_img" src="https://images.pexels.com/photos/14457276/pexels-photo-14457276.jpeg?auto=compress&cs=tinysrgb&w=1600" />
         </div>
  
      <section id="home-menu">
@@ -111,16 +111,12 @@
 			<h3> Entrees, mains, and handhelds</h3>
 	<ul>
 		<li>
-			<span class="dish">Nachos</span>
+			<span class="dish">Nachos.</span>
 			<span class="Price">48 RON</span>
 			<span class="Description">cheese, onions, tomotoes. 
 			</span>
 		</li>
-		<li>
-			<span class="dish">Tacos.</span>
-			<span class="Price">48 RON</span>
-			<span class="Description">chicken or beef with your choice of side.</span>
-		</li>
+		
 		<li>
 			<span class="dish">Chicken rice bowl.</span>
 			<span class="Price">64 RON</span>
@@ -141,9 +137,9 @@
 			<span class="Description">Steak and your choice of side.</span>
 		</li>
 		<li>
-			<span class="dish">burrito.</span>
-			<span class="Price">32 RON</span>
-			<span class="Description">Your choice of beef or chicken.</span>
+			<span class="dish">Carrot Soup.</span>
+			<span class="Price">30 RON</span>
+			<span class="Description">roasted sweet carrot soup with tomato, basil and garlic.</span>
 		</li>
 		
 	</ul></section></div>
