--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <ul>
                 <!-- main nav section -->
                 <li><a href='?page=home'>HOME </a></li>
-                <li><a href='#menu'>MENU </a></li>
-                <li><a href='#story'>OUR STORY  </a></li>
-                <li><a href='?page=contactus'>CONTACT US </a></li>
+				<li><a href='#story'>OUR STORY  </a></li>
+                <li><a href='#menu'>MENU </a></li> 
+                <li><a href='#contact'>CONTACT US </a></li>
                 
             </ul>
         </nav>
@@ -193,6 +193,8 @@
 	</ul></section>
 	
 </div>
+<div id="contact">
+<h2>CONTACT US</h2></div>
 </div>
 
 
