--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <!-- img tile system -->
             <img src="https://images.pexels.com/photos/5935189/pexels-photo-5935189.jpeg?auto=compress&cs=tinysrgb&w=600"/>
             <img src="https://images.pexels.com/photos/338713/pexels-photo-338713.jpeg?auto=compress&cs=tinysrgb&w=600" />
+		<img src="https://images.pexels.com/photos/1552630/pexels-photo-1552630.jpeg?auto=compress&cs=tinysrgb&w=1600" >
 		</div>
             
     <!-- menu layout-->
@@ -108,7 +109,8 @@
         <div class="menuIntro">    
             <img  id="caption_img"src="https://images.pexels.com/photos/4968297/pexels-photo-4968297.jpeg?auto=compress&cs=tinysrgb&w=1600"  />  
             <img id="caption_img" src="https://images.pexels.com/photos/14457276/pexels-photo-14457276.jpeg?auto=compress&cs=tinysrgb&w=1600" />
-        </div>
+        
+		</div>
  
      <section id="home-menu">
             <h2>FOOD MENU</h2>
