css submitButton and submitMsg

--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
 	  <textarea id="subject" name="subject" placeholder="Write your message..." style="height:200px"></textarea>
   
 	  
-	  <input type="button" id="submit" value="Submit!" />
-	  <div id="submitMsg">Thank you for message!</div>
+	  <input type="button" id="submitButton" value="Submit!" />
+	  <div id="submitMsg">Thank you for your message!</div>
 	</form>
 	
   </div>
